[1.1] mismo número de teléfono a ambos colegios

--- a/niveles.html
+++ b/niveles.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -294,10 +294,7 @@
         <li class="nav-item col-lg-2 col-sm-4 col-6">
           <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab" aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
-          <a class="nav-link" id="finSemana2" data-toggle="pill" href="#pills-finSemana2" role="tab" aria-controls="pills-finSemana2" aria-selected="false">Fin de Semana</a>
-        </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-sm-4 col-12">
           <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab" aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
         </li>
       </ul>
@@ -413,79 +410,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="pills-finSemana2" role="tabpanel" aria-labelledby="finSemana2">
-          <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/loasdfasdf.jpg" alt="fin_de_semana">
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12">
-              <h2><u>Fin de Semana</u></h2>
-              <p>(Sábado / Domingo / Tutorías Martes)</p>
-              <p>
-                <ul class="list-group">
-                  <li class="list-group-item">
-                    <u>Primaria Acelerada</u> <br>
-                    Inscripción: Q.250.00 <br>
-                    Cuota mensual: Q.185.00
-                  </li>
-                  <li class="list-group-item list-group-item-primary">
-                    <u>Básico Regular</u> (no importa la edad) <br>
-                    Inscripción Q.250.00 <br>
-                    Cuota mensual:<br>
-                    Primero básico Q.235.00 <br>
-                    Segundo y tercero básico Q.185.00
-                  </li>
-                  <li class="list-group-item list-group-item-secondary">
-                    <u>Básico por Madurez</u> <br>
-                    2 años completos/ 4 semestre / (mayor de 18 años) <br>
-                    Inscripción: Q.250.00 <br>
-                    Cuota Mensual: <br>
-                    Primero y segundo semestre: Q.235.00 <br>
-                    Tercero y cuarto semestre: Q.185.00 <br>
-                  </li>
-                  <li class="list-group-item list-group-item-success">
-                    <u>Diversificado</u> <br>
-                    <strong>Perito Contador con Diplomado en Computación</strong> <br> (3 años completos) <br>
-                    <strong>El Secretario y Oficinista con Diplomado en Computación</strong> <br> (2 años completos) <br>
-                    <u>Inscripción</u> Q.250.00 <br>
-                    <u>Cuota Mensual</u>: <br>
-                    Cuarto secretariado y Perito: Q.250.00 <br>
-                    Quinto perito: Q.250.00 <br>
-                    Quinto secretariado y sexto perito: Q.225.00 <br>
-                    <strong>Bachillerato en Ciencias y Letras por Madurez con Diplomado en Computación.</strong> (1 año) <br>
-                    Inscripción: Q.250.00 <br>
-                    Cuota mensual: Q.225.00 <br>
-                  </li>
-                  <li class="list-group-item list-group-item-warning">
-                    <u>Papelería de inscripción</u> <br>
-                    Las inscripciones se inician en el mes de noviembre y continuar en enero. <br>
-                    <strong>Al momento de inscripción llenará un formulario de inscripción y ficha de control individual.</strong> <br>
-                    Cada alumno debe entregar en un folder tamaño oficio color rojo para plan diario y azul oscuro para los fin de semana, la papelería requerida, en el siguiente orden, de acuerdo al grado al que ingrese. <br>
-                    * Certificación de nacimiento original y reciente de RENAP y 2 fotocopias. <br>
-                    * 2 fotografías recientes. <br>
-                    * constancia parvularia firmada por el Ministerio de educación (no indispensable) <br>
-                    * Certificado original de 1ro. Primaria <br>
-                    * Certificado original de 2do. Primaria <br>
-                    * Certificado original de 3ro. Primaria <br>
-                    * Certificado original de 4to. Primaria <br>
-                    * Certificado original de 5to. Primaria <br>
-                    * Certificado original de 6to. Primaria <br>
-                    * Diploma de sexto primaria <br>
-                    * Certificado original de 1ro. Básico con matrícula o código personal. <br>
-                    * Certificado original de 2do. Básico con matrícula o código personal. <br>
-                    * Certificado original de 3ro. Básico con matrícula o código personal. <br>
-                    * -Diploma de Tercero Básico firmado por Supervisor educativo en original <br>
-                    * Certificado de 4to. diversificado con matricula o código personal <br>
-                    * Certificado de 5to. diversificado con matricula o código personal <br>
-                    * Carta de buena conducta. <br>
-                  </li>
-                  <li class="list-group-item list-group-item-info">Los alumnos de plan Fin de Semana no utilizan libros de texto, unicamente plataformas digitales, lo que reduce el costo inicial de material</li>
-                </ul>
-                <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
-              </p>
-            </div>
-          </div>
-        </div>
+
         <div class="tab-pane fade show" id="pills-ubicacion2" role="tabpanel" aria-labelledby="ubicacion2">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1148.2966935565717!2d-90.40776420563567!3d14.51942477658745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x919826d065a91b04!2sCentro+Educativo+Integral+El+Saber+2!5e0!3m2!1ses-419!2sgt!4v1540960339512"
             width="800" height="650" frameborder="0" style="border:1px solid blue;" allowfullscreen></iframe>
@@ -504,7 +429,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
         <h3>Centro Educativo Integral <br> El Saber 1</h3>
         <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
-        <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
+        <a class="btn btn-success" href="tel:+50250620000">Tel. 5062-0000 <small>← Click para llamar</small></a>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
         <h3 class="text-center">¡Síguenos!</h3>
@@ -515,7 +440,7 @@
       <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
         <h3>Centro Educativo Integral <br> El Saber 2</h3>
         <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
-        <a href="tel:+50266407305">Tel. 6640-7305</a> <br> <a href="tel:+50250620000">Tel. 5062-0000</a> <small>← Click para llamar</small> <br> <a href="tel:+50266343164">Tel. 6634-3164</a>
+        <a class="btn btn-success" href="tel:+50250620000">Tel. 5062-0000 <small>← Click para llamar</small></a>
       </div>
     </div>
   </footer>
