[1.2] Botón para llamadas mas notorio y grander, Tabs de colegios listos luego de eliminar un li.

--- a/niveles.html
+++ b/niveles.html
@@ -63,22 +63,22 @@
     </div>
     <div id="el_saber_1" class="tabcontent">
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link active" id="pre-primaria" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Pre-Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link" id="primaria" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link" id="basicos" data-toggle="pill" href="#pills-basicos" role="tab" aria-controls="pills-basicos" aria-selected="false">Básicos</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link" id="diversificado" data-toggle="pill" href="#pills-diversificado" role="tab" aria-controls="pills-diversificado" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link" id="finSemana" data-toggle="pill" href="#pills-finSemana" role="tab" aria-controls="pills-finSemana" aria-selected="false">Fin de Semana</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-2 col-md-4 col-sm-4 col-6">
           <a class="nav-link" id="ubicacion" data-toggle="pill" href="#pills-ubicacion" role="tab" aria-controls="pills-ubicacion" aria-selected="false">Ubicación</a>
         </li>
       </ul>
@@ -282,19 +282,19 @@
 
     <div id="el_saber_2" class="tabcontent scroll">
       <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-4 col-sm-4 col-6">
           <a class="nav-link active" id="pre-primaria2" data-toggle="pill" href="#pills-pre-primaria2" role="tab" aria-controls="pills-pre-primaria2" aria-selected="true">Pre-Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-4 col-sm-4 col-6">
           <a class="nav-link" id="primaria2" data-toggle="pill" href="#pills-primaria2" role="tab" aria-controls="pills-primaria2" aria-selected="false">Primaria</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-4 col-sm-4 col-6">
           <a class="nav-link" id="basicos2" data-toggle="pill" href="#pills-basicos2" role="tab" aria-controls="pills-basicos2" aria-selected="false">Básicos</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-6">
+        <li class="nav-item col-lg-6 col-sm-6 col-6">
           <a class="nav-link" id="diversificado2" data-toggle="pill" href="#pills-diversificado2" role="tab" aria-controls="pills-diversificado2" aria-selected="false">Diversificado</a>
         </li>
-        <li class="nav-item col-lg-2 col-sm-4 col-12">
+        <li class="nav-item col-lg-6 col-sm-6 col-12">
           <a class="nav-link" id="ubicacion2" data-toggle="pill" href="#pills-ubicacion2" role="tab" aria-controls="pills-ubicacion2" aria-selected="false">Ubicación</a>
         </li>
       </ul>
