--- a/niveles.html
+++ b/niveles.html
@@ -87,7 +87,7 @@
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pre-primaria">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Preprimaria_S1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -118,7 +118,7 @@
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="primaria">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Primaria_S1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -143,7 +143,7 @@
         <div class="tab-pane fade" id="pills-basicos" role="tabpanel" aria-labelledby="basicos">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Basicos_S1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -168,7 +168,7 @@
         <div class="tab-pane fade" id="pills-diversificado" role="tabpanel" aria-labelledby="diversificado">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Diversificado_S1.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -201,7 +201,7 @@
         <div class="tab-pane fade" id="pills-finSemana" role="tabpanel" aria-labelledby="finSemana">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/loasdfasdf.jpg" alt="fin_de_semana">
+              <img src="img/FotosParaPágina/FDS_S1.jpg" alt="fin_de_semana">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <h2><u>Fin de Semana</u></h2>
@@ -303,7 +303,7 @@
         <div class="tab-pane fade show active" id="pills-pre-primaria2" role="tabpanel" aria-labelledby="pre-primaria2">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Preprimaria_S2.jpg" alt="Pre-Primaria">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -335,7 +335,7 @@
         <div class="tab-pane fade" id="pills-primaria2" role="tabpanel" aria-labelledby="primaria2">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Primaria_S2.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -360,7 +360,7 @@
         <div class="tab-pane fade" id="pills-basicos2" role="tabpanel" aria-labelledby="basicos2">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Basicos_S2.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
@@ -385,15 +385,15 @@
         <div class="tab-pane fade" id="pills-diversificado2" role="tabpanel" aria-labelledby="diversificado2">
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-              <img src="img/pre-primaria.jpg" alt="">
+              <img src="img/FotosParaPágina/Diversificado_S2.jpg" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
                 <li class="list-group-item list-group-item-dark">Diversificado</li>
                 <li class="list-group-item list-group-item-info">
-                  <u>Magisterio Infantil Bilingue Intercultural</u> <br>
+                  <u>Magisterio Infantil Bilingüe Intercultural</u> <br>
                   (Con énfasis en Idioma Inglés) <br>
-                  Horario: 7:00 am a 1:30 p.m. <br>
+                  Horario: 7:00 a.m. a 1:30 p.m. <br>
                   Inscripción: Q.500.00 <br>
                   Cuota mensual: Q.450.00
                 </li>
