[1.4] Correcciones de Typing en textos.

--- a/niveles.html
+++ b/niveles.html
@@ -104,12 +104,12 @@
                   Preparatoria: 6 años <br>
                 </li>
                 <li class="list-group-item list-group-item-info">
-                  Horario: 7:00 am a 12:30 p.m <br>
+                  Horario: 7:00 a.m. a 12:30 p.m. <br>
                   Inscripción: Q.500.00 <br>
                   Cuota Mensual Q.300.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -132,11 +132,11 @@
                   Horario: 7:00 a.m. a 12:40 p.m. <br>
                 </li>
                 <li class="list-group-item list-group-item-warning">
-                  Inscripcion: 0.500.00 <br>
+                  Inscripción: Q.500.00 <br>
                   Cuota Mensual: Q.325.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
                   Cuota Mensual: Q.350.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -174,15 +174,15 @@
               <ul class="list-group">
                 <li class="list-group-item list-group-item-dark">Diversificado</li>
                 <li class="list-group-item list-group-item-primary">
-                  <u>Perito Contador con Diplomado en Computación <br> Y Administración de Empresas <br> (3 años)</u> <br>
-                  Horario: 7:00 am a 12:50 pm <br>
+                  <u>Perito Contador con Diplomado en Computación <br> Y Administración de Empresas</u> <br> (3 años) <br>
+                  Horario: 7:00 a.m. a 12:50 pm <br>
                   Inscripción: Q.500.00 <br>
                   Cuota Mensual: Q.375.00
                 </li>
                 <li class="list-group-item list-group-item-success">
                   <u>Secretariado Y Oficinista Con Diplomado en Computación</u> <br>
                   (2 años) <br>
-                  Horario: 7:00 am a 12:50 p.m. <br>
+                  Horario: 7:00 a.m. a 12:50 p.m. <br>
                   Inscripción: Q.500.00 <br>
                   Cuota Mensual: Q.375.00
                 </li>
@@ -190,11 +190,11 @@
                   <u>Bachillerato en Ciencias Y Letras <br> con Diplomado en Computación y Contabilidad</u> <br>
                   (2 años) <br>
                   Horario: 7:00 a.m. a 12:50 p.m. <br>
-                  Inscripción: Q.500 00 <br>
+                  Inscripción: Q.500.00 <br>
                   Cuota Mensual: Q.375.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -217,56 +217,57 @@
                     <u>Básico Regular</u> (no importa la edad) <br>
                     Inscripción Q.250.00 <br>
                     Cuota mensual:<br>
-                    Primero básico Q.235.00 <br>
-                    Segundo y tercero básico Q.185.00
+                    Primero Básico Q.235.00 <br>
+                    Segundo y Tercero Básico Q.185.00
                   </li>
                   <li class="list-group-item list-group-item-secondary">
                     <u>Básico por Madurez</u> <br>
                     Dos años completos/ 4 semestre / mayor de 18 años <br>
                     Inscripción Q.250.00 <br>
-                    Cuota Mensual <br>
-                    Primero y segundo semestre Q.235.00 <br>
-                    Tercero y cuarto semestre Q.185.00 <br>
+                    Cuota Mensual: <br>
+                    Primer y Segundo Semestre Q.235.00 <br>
+                    Tercer y Cuarto Semestre Q.185.00 <br>
                   </li>
                   <li class="list-group-item list-group-item-success">
                     <u>Diversificado</u> <br>
                     <strong>Perito Contador con Diplomado en Computación</strong> <br> (Tres años completos) <br>
-                    <strong>El Secretario y Oficinista con Diplomado en Computación</strong> <br> (dos años completos) <br>
+                    <strong>Secretariado y Oficinista con Diplomado en Computación</strong> <br> (Dos años completos) <br>
                     <u>Inscripción</u> Q.250.00 <br>
                     <u>Cuota Mensual</u>: <br>
-                    Cuarto secretariado y Perito: Q.250.00 <br>
-                    Quinto perito: Q.250.00 <br>
-                    Quinto secretariado y sexto perito: Q.225.00 <br>
-                    <strong>Bachillerato en ciencias y letras por madurez con diplomado en computación.</strong> (1 año) <br>
+                    Cuarto Secretariado y Perito: Q.250.00 <br>
+                    Quinto Perito: Q.250.00 <br>
+                    Quinto Secretariado y Sexto Perito: Q.225.00 <br>
+                    <strong>Bachillerato en Ciencias y Letras por Madurez con Diplomado en Computación</strong> (1 año) <br>
                     Inscripción: Q.250.00 <br>
                     Cuota mensual: Q.225.00 <br>
                   </li>
                   <li class="list-group-item list-group-item-warning">
-                    <u>Papelería de inscripción</u> <br>
-                    Las inscripciones se inician en el mes de noviembre y continuar en enero. <br>
+                    <u>Papelería de Inscripción</u> <br>
+                    <p style="text-align: justify;">Las inscripciones se inician en el mes de noviembre y continúa en enero. <br>
                     <strong>Al momento de inscripción llenará un formulario de inscripción y ficha de control individual.</strong> <br>
-                    Cada alumno debe entregar en un folder tamaño oficio color rojo para plan diario y azul oscuro para los fin de semana, la papelería requerida, en el siguiente orden, de acuerdo al grado al que ingrese. <br>
-                    * certificación de nacimiento original y reciente de RENAP y dos fotocopias. <br>
-                    * dos fotografías recientes. <br>
-                    * constancia parvularia firmada por el Ministerio de educación (no indispensable) <br>
-                    * Certificado original de 1ro. Primaria <br>
-                    * Certificado original de 2do. Primaria <br>
-                    * Certificado original de 3ro. Primaria <br>
-                    * Certificado original de 4to. Primaria <br>
-                    * Certificado original de 5to. Primaria <br>
-                    * Certificado original de 6to. Primaria <br>
-                    * Diploma de sexto primaria <br>
-                    * Certificado original de 1ro. Básico con matrícula O código personal. <br>
-                    * Certificado original de 2do. Básico con matrícula o código personal. <br>
-                    * Certificado original de 3ro. Básico con matrícula O código personal. <br>
-                    * Diploma de Tercero Básico firmado por Supervisor educativo en original <br>
-                    * Certificado de 4to. diversificado con matricula ocde go personal <br>
-                    * Certificado de 5to diversificado con matricula o Codigo personal <br>
-                    * Carta de buena conducta. <br>
+                    Cada alumno debe entregar en un folder tamaño oficio color <span style="color: red;"><u>rojo para plan diario</u></span> y <span style="color: blue;"><u>azul oscuro para los fin de semana</u></span>, la papelería requerida, en el siguiente orden, de acuerdo al grado al que ingrese. <br>
+                    ● Certificación de nacimiento original y reciente de RENAP y dos fotocopias. <br>
+                    ● Dos fotografías recientes. <br>
+                    ● Constancia parvularia firmada por el Ministerio de educación (no indispensable). <br>
+                    ● Certificado original de 1ro. Primaria. <br>
+                    ● Certificado original de 2do. Primaria. <br>
+                    ● Certificado original de 3ro. Primaria. <br>
+                    ● Certificado original de 4to. Primaria. <br>
+                    ● Certificado original de 5to. Primaria. <br>
+                    ● Certificado original de 6to. Primaria. <br>
+                    ● Diploma de sexto primaria. <br>
+                    ● Certificado original de 1ro. Básico con matrícula o Código Personal. <br>
+                    ● Certificado original de 2do. Básico con matrícula o Código Personal. <br>
+                    ● Certificado original de 3ro. Básico con matrícula o Código Personal. <br>
+                    ● Diploma de Tercero Básico firmado por Supervisor Educativo en original. <br>
+                    ● Certificado de 4to. Diversificado con matrícula o Código Personal. <br>
+                    ● Certificado de 5to. Diversificado con matrícula o Código Personal. <br>
+                    ● Carta de buena conducta. <br>
+                    </p>
                   </li>
-                  <li class="list-group-item list-group-item-info">Los alumnos de plan Fin de Semana no utilizan libros de texto, unicamente plataformas digitales, lo que reduce el costo inicial de material</li>
+                  <li class="list-group-item list-group-item-info">Los alumnos de <u>Plan Fin de Semana</u> no utilizan libros de texto, unicamente plataformas digitales, lo que reduce el costo inicial de material</li>
                 </ul>
-                <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+                <p>Fecha de Inscripción: Noviembre y Enero</p>
               </p>
             </div>
           </div>
@@ -308,7 +309,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
               <ul class="list-group">
                 <li class="list-group-item list-group-item-dark">
-                  Pre-Primaria <br>
+                  Pre - Primaria <br>
                 </li>
                 <li class="list-group-item list-group-item-primary">
                   Kinder: 3 y 4 años
@@ -320,12 +321,12 @@
                   Preparatoria: 6 años <br>
                 </li>
                 <li class="list-group-item list-group-item-info">
-                  Horario: 7:00 am a 12:30 p.m <br>
+                  Horario: 7:00 a.m. a 12:30 p.m <br>
                   Inscripción: Q.500.00 <br>
                   Cuota Mensual Q.325.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
 
             </div>
           </div>
@@ -349,11 +350,11 @@
                   Horario: 7:00 a.m. a 12:40 p.m. <br>
                 </li>
                 <li class="list-group-item list-group-item-warning">
-                  Inscripcion: 0.500.00 <br>
+                  Inscripción: Q.500.00 <br>
                   Cuota Mensual: Q.350.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -378,7 +379,7 @@
                   Cuota Mensual: Q.375.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
@@ -406,7 +407,7 @@
                   Cuota mensual: Q.400.00
                 </li>
               </ul>
-              <p>Fecha de Inscripción Plan Fin de Semana: Noviembre y Enero</p>
+              <p>Fecha de Inscripción: Noviembre y Enero</p>
             </div>
           </div>
         </div>
