--- a/index.html
+++ b/index.html
@@ -180,26 +180,20 @@
       <h3 class="text-center">¡Contáctanos!</h3>
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
-          <div class="container">
-            <h3>Centro Educativo Integral <br> El Saber 1</h3>
-            <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
-            <a href="tel:+50266343164">Tel. 6634-3164</a> <small>← Click para llamar</small>
-          </div>
+          <h3>Centro Educativo Integral <br> El Saber 1</h3>
+          <p><u>Dirección</u>: 2ª. Calle 1-40, Zona 2, San José Pinula</p> <br>
+          <a class="btn btn-success" href="tel:+50250620000">Tel. 5062-0000 <small>← Click para llamar</small></a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
-          <div class="container">
-            <h3 class="text-center">¡Síguenos!</h3>
-            <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
-            <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
-            <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
-          </div>
+          <h3 class="text-center">¡Síguenos!</h3>
+          <a href="https://www.facebook.com/ColegioElSaber.SJP" target="_blank"><img class="icon redondear" src="img/facebook-icon.png" alt="Facebook_El_saber"></a>
+          <a href="https://www.youtube.com/channel/UC2FBSP7RlcrPEpAsPuiRDEQ" target="_blank"><img class="icon redondear" src="img/youtube-icon.png" alt="youtube_channel_El_Saber"></a>
+          <a href="mailto:centroeducativointegralelsaber@gmail.com"><img class="icon redondear" src="img/gmail-icon.png" alt="gmail_to_El_Saber"></a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg text-center pb-1">
-          <div class="container">
-            <h3>Centro Educativo Integral <br> El Saber 2</h3>
-            <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
-            <a href="tel:+50266407305">Tel. 6640-7305</a> <br> <a href="tel:+50250620000">Tel. 5062-0000</a> <small>← Click para llamar</small> <br> <a href="tel:+50266343164">Tel. 6634-3164</a>
-          </div>
+          <h3>Centro Educativo Integral <br> El Saber 2</h3>
+          <p><u>Dirección</u>: Lote 3, Manzana D, Sector “Los Claveles”,<br>Residenciales San José, San José Pinula</p>
+          <a class="btn btn-success" href="tel:+50250620000">Tel. 5062-0000 <small>← Click para llamar</small></a>
         </div>
       </div>
     </footer>
