--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
         <ul class="carousel-indicators">
           <li data-target="#carousel" data-slide-to="0" class="active"></li>
           <li data-target="#carousel" data-slide-to="1"></li>
+          <li data-target="#carousel" data-slide-to="2"></li>
+          <li data-target="#carousel" data-slide-to="3"></li>
+          <li data-target="#carousel" data-slide-to="4"></li>
+          <li data-target="#carousel" data-slide-to="5"></li>
+          <li data-target="#carousel" data-slide-to="6"></li>
+          <li data-target="#carousel" data-slide-to="7"></li>
+          <li data-target="#carousel" data-slide-to="8"></li>
+          <li data-target="#carousel" data-slide-to="9"></li>
+          <li data-target="#carousel" data-slide-to="10"></li>
+          <li data-target="#carousel" data-slide-to="11"></li>
+          <li data-target="#carousel" data-slide-to="12"></li>
+          <li data-target="#carousel" data-slide-to="13"></li>
+          <li data-target="#carousel" data-slide-to="14"></li>
+          <li data-target="#carousel" data-slide-to="15"></li>
+          <li data-target="#carousel" data-slide-to="16"></li>
+          <li data-target="#carousel" data-slide-to="17"></li>
+          <li data-target="#carousel" data-slide-to="18"></li>
+          <li data-target="#carousel" data-slide-to="19"></li>
+
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -73,6 +92,60 @@
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="img/fondoP2.jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (1).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (2).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (3).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (15).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (5).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (6).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (7).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (8).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (9).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (10).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (11).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (12).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (13).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (14).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (16).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (17).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (18).jpg" alt="el_saber_2">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/FotosParaPágina/FotosElSaber (19).jpg" alt="el_saber_2">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carousel" data-slide="prev">
@@ -91,13 +164,13 @@
     <div class="row">
       <div class="col-12 col-sm-8 col-md-8 text-center pb-1">
         <div class="container">
-          <div class="tab">
-            <button id="defaultOpen" class="tablinks" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
-            <button class="tablinks" onclick="abrirPanel(event, 'Proposito')">Propósito</button>
-            <button class="tablinks" onclick="abrirPanel(event, 'Mision')">Misión</button>
-            <button class="tablinks" onclick="abrirPanel(event, 'Vision')">Visión</button>
-            <button class="tablinks" onclick="abrirPanel(event, 'Historia')">Historia</button>
-          </div>
+          <nav class="nav nav-pills flex-column flex-sm-row">
+            <button id="defaultOpen" class="flex-fill text-center tab active" onclick="abrirPanel(event, 'Objetivo')">Objetivo</button>
+            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Proposito')">Propósito</button>
+            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Mision')">Misión</button>
+            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Vision')">Visión</button>
+            <button class="flex-fill text-center tab" onclick="abrirPanel(event, 'Historia')">Historia</button>
+          </nav>
 
           <div id="Objetivo" class="tabcontent scroll">
             <h3 class="text-center">Objetivo</h3>
